[package]
name = "rustportmap"
version = "0.0.1"
authors = ["Shain Singh <shsingh@linux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = "0.22"
futures = "0.3"
tokio-stream = "0.1"
